First version of example code.

--- a/index.html
+++ b/index.html
@@ -2,3 +2,31 @@
 Usa este archivo para tu proyecto. No olvides hacer
 la estructura correta y guardar TODO tu CSS en el archivo styles.css
  -->
+<!DOCTYPE HTML SYSTEM>
+  <head>
+
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" >
+  </head>
+
+  <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+          <h1>Testing out Knockout.JS</h1>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+          <p>First name: <input data-bind="value: firstName" /></p>
+          <p>Last name: <input data-bind="value: lastName" /></p>
+          <h2>Hello, <span data-bind="text: fullName"> </span>!</h2>
+        </div>
+      </div>
+    </div>
+
+
+    <script src="bower_components/knockout/dist/knockout.js" type="text/javascript"></script>
+    <script src="js/script.js" type="text/javascript"></script>
+  </body>
+</html>
